--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n-ize.css",
-  "version": "0.5.4",
+  "version": "0.6.0",
   "description": "An add-on to CSS normalization. With slots for your design system.",
   "keywords": [
     "css",
@@ -10,11 +10,11 @@
     "css-custom-properties"
   ],
   "author": "Simon Schrape",
-  "main": "n’ize.css",
-  "style": "n’ize.css",
+  "main": "n-ize.css",
+  "style": "n-ize.css",
   "files": [
     "LICENSE.md",
-    "n’ize.css",
+    "n-ize.css",
     "tokens.css"
   ],
   "repository": "smnscp/n-ize.css",
